--- a/week8/articlescode2.ipynb
+++ b/week8/articlescode2.ipynb
@@ -1,6 +1,30 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "444c1bf9-72e8-480e-adf0-2c6c86343cde",
+   "metadata": {},
+   "source": [
+    "<p style=\"text-align:center; font-family:Tahoma; font-size:60px; font-weight:bold;\">\n",
+    "به نام خدا\n",
+    "</p>\n",
+    "\n",
+    "<h2 style=\"text-align:center;\">\n",
+    "اجرای عملی پروژه مقاله با دیتا دوم در جوپیتر نوت بوک\n",
+    "</h2>\n",
+    "\n",
+    "<div style=\"text-align:right;\" dir=\"rtl\">\n",
+    "عنوان مقاله: زیرساخت گسترده و مبتنی بر قصد شبکه سازی مجموعه داده ها<br>\n",
+    "برای شبکه های خودگردان مبتنی بر هوش مصنوعی در نسل پنجم و فراتر از آن<br>\n",
+    "درس: شبکه های مخابراتی<br>\n",
+    "استاد: دکتر مهدی اسلامی\n",
+    "</div>\n",
+    "\n",
+    "<img src=\"https://upload.wikimedia.org/wikipedia/commons/9/95/SRBIAU_logo.png\"\n",
+    "     width=\"200\" height=\"150\">"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "bd003d88-7d32-4e03-aa8b-d0581c30f375",
